<package>
  <name>openraveros_tutorials</name>
  <version>0.0.1</version>
  <description>There are two ways to start the server.</description>
  <maintainer email="rosen.diankov@gmail.com">Rosen Diankov</maintainer>

  <license>Apache License</license>
  <license>Version 2.0</license>

  <url type="website">http://ros.org/wiki/openraveros</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Rosen Diankov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>openraveros</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>openraveros</run_depend>
  <run_depend>rospy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>openraveros</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->

</package>
