<package>
  <name>orrosplanning</name>
  <version>0.0.1</version>
  <description>Contains robot ik solvers, planners, and commonly used functions that integrate with the ROS framework.</description>
  <maintainer email="rosen.diankov@gmail.com">Rosen Diankov</maintainer>

  <license>BSD</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author email="rosen.diankov@gmail.com">Rosen Diankov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>openrave</build_depend>
  <build_depend>openraveros</build_depend>
  <build_depend>posedetection_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>kinematics_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>openrave</run_depend>
  <run_depend>openraveros</run_depend>
  <run_depend>posedetection_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>kinematics_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>openrave</test_depend> -->
  <!-- <test_depend>openraveros</test_depend> -->
  <!-- <test_depend>posedetection_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>kinematics_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

<export>
    <openrave pluginpath="${prefix}/lib"/>
</export>

</package>
