<package>
  <name>session_tutorials</name>
  <version>0.0.1</version>
  <description>session_tutorials</description>
  <maintainer email="rdiankov@cs.cmu.edu">Rosen Diankov</maintainer>

  <license>BSD</license>

  <url type="website">http://pr.willowgarage.com/wiki/session_tutorials</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="rdiankov@cs.cmu.edu">Rosen Diankov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_sessions</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_sessions</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>roscpp_sessions</test_depend> -->

</package>
