rosbuild_add_library(robot_control robotcontrolmain.cpp)
rosbuild_link_boost(robot_control thread)

rosbuild_add_executable(tfsender tfsender.cpp)
target_link_libraries(tfsender openrave-core)

rosbuild_add_executable(simulationserver simulationserver.cpp)
target_link_libraries(simulationserver openrave-core)
